<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_about_title"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_about_description"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:layout_below="@id/dialog_about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_about_email"
        android:text="@string/email"
        android:autoLink="email"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="40sp"
        android:layout_below="@id/dialog_about_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>