<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/information_layout"
        android:background="#00FFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/return_button"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_width="30sp"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/current_location_text_view"
            android:text="@string/current_location"
            android:textColor="#FF00FF"
            android:textSize="20sp"
            android:layout_marginLeft="30sp"
            android:layout_marginStart="30sp"
            android:layout_toRightOf="@id/back_button"
            android:layout_toEndOf="@id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lat_text_view"
            android:text="@string/latitude"
            android:textColor="#000000"
            android:layout_marginLeft="30sp"
            android:layout_marginStart="30sp"
            android:layout_below="@id/current_location_text_view"
            android:layout_toRightOf="@id/back_button"
            android:layout_toEndOf="@id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/long_text_view"
            android:text="@string/longitude"
            android:textColor="#000000"
            android:layout_marginLeft="30sp"
            android:layout_marginStart="30sp"
            android:layout_below="@id/lat_text_view"
            android:layout_toRightOf="@id/back_button"
            android:layout_toEndOf="@id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/postal_code_text_view"
            android:text="@string/postal_code"
            android:textColor="#000000"
            android:layout_marginLeft="30sp"
            android:layout_marginStart="30sp"
            android:layout_below="@id/long_text_view"
            android:layout_toRightOf="@id/back_button"
            android:layout_toEndOf="@id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/set_location_layout"
            android:background="@drawable/rounded_button"
            android:layout_margin="10sp"
            android:layout_below="@id/postal_code_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">

            <RelativeLayout
                android:layout_weight="3"
                android:background="#11AAFF"
                android:layout_width="0sp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/set_location_button"
                    android:background="@drawable/ic_search"
                    android:layout_marginTop="15sp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="15sp"
                    android:layout_width="50sp"
                    android:layout_height="45sp" />

            </RelativeLayout>

            <EditText
                android:layout_weight="9"
                android:id="@+id/set_location_text"
                android:hint="@string/example_search"
                android:textSize="15sp"
                android:inputType="textPostalAddress"
                android:layout_marginLeft="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginRight="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_width="0sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/map_layout"
        android:layout_below="@id/information_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/refresh_current_location"
            android:background="@drawable/current_location"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="70sp"
            android:layout_height="70sp"/>

        <Button
            android:id="@+id/search_nearby_button"
            android:background="@drawable/nearby_locations"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="10sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="50sp"
            android:layout_height="50sp" />

        <fragment
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activity_Maps"/>

    </RelativeLayout>

</RelativeLayout>
